[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimmo"
version = "0.5.0"
description = "Mobile Inspector for Misconfigurations & Metadata Observation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MIMMO contributors" }]
keywords = ["android", "apk", "security", "static-analysis", "secrets", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
# Pure standard library — no runtime dependencies.
dependencies = []

[project.scripts]
mimmo = "mimmo.cli:main"

[tool.setuptools.packages.find]
include = ["mimmo*"]
